--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^3.1.7",
     "express": "^4.18.1",
     "express-session": "^1.17.2",
+    "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "nodemailer": "^6.7.5",
     "nodemailer-smtp-transport": "^2.7.4",
