--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-USER = "root"
-HOST = "localhost"
-PASSWORD = "root"
-DATABASE = "alone"
+USER = "z3jzhej5s3f8ugms"
+HOST = "cxmgkzhk95kfgbq4.cbetxkdyhwsb.us-east-1.rds.amazonaws.com"
+PASSWORD = "ykbac6yaibxxs9np"
+DATABASE = "bzeaai3btm0b6icd"
 DB_PORT = "3306"
